--- a/src/web/assets/pluginstore/src/sass/grids.scss
+++ b/src/web/assets/pluginstore/src/sass/grids.scss
@@ -1,15 +1,13 @@
 .ps-grid-plugins {
-  @apply .tw-flex .tw-flex-wrap;
+  @apply .tw-flex .tw-flex-wrap .tw--mx-4;
   box-sizing: border-box;
-  margin: 0 -10px;
 
   .ps-grid-box {
     @apply .tw-w-1/3;
     box-sizing: border-box;
-    margin-bottom: 20px;
 
     .plugin-card {
-      margin: 0 10px;
+      @apply .tw-mx-4;
 
       .plugin-icon {
         @apply .tw-flex-no-shrink;
